--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/food?useUnicode=true&serverTim
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
+food.app.cookie.max.age=86400
+food.app.default.locale=ru
