complete security and add product list requests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,7 @@ spring.datasource.password=root
 spring.jpa.show-sql=true
 food.app.cookie.max.age=86400
 food.app.default.locale=ru
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=true
+server.servlet.session.timeout=300
 
