--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.password=root
 spring.jpa.show-sql=true
 food.app.cookie.max.age=86400
 food.app.default.locale=ru
+food.app.max.stats.days=30
 server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.secure=true
 server.servlet.session.timeout=300
